--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -11,7 +11,7 @@ position: absolute;
 z-index: -1;
 width: 100%;
 height: 100%;
-background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+background-image: linear-gradient(to right, #0f2027, #203a43, #2c5364);
 
 }
 .hero-foreground {
