--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -1,6 +1,7 @@
 .hero {
-
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .hero .hero-title {
@@ -17,7 +18,7 @@ background-image: linear-gradient(to right, #0f2027, #203a43, #2c5364);
 .hero-foreground {
 }
 .ipone {
-  width: 177px;
+  width: 100px;
   height: 100%;
 margin-right: 30px;
 }
@@ -30,7 +31,6 @@ margin-right: 30px;
 .hero-right {
 color: #ffffff;
 font-size: 12px;
-margin-top: -60px;
 }
 
 .hero-description {
