--- a/css/main.css
+++ b/css/main.css
@@ -7,5 +7,5 @@
 @import url('components/navigation.css');
 @import url('components/fonts.css');
 @import url('components/normalize.css');
-
+@import url('components/section.css');
 @import url('components/hero.css');
