--- a/css/components/grid.css
+++ b/css/components/grid.css
@@ -1,4 +1,6 @@
 .row {
+  padding-top: 30px;
+  padding-bottom: 30px;
   display: flex;
   flex-wrap: wrap;
   margin: 0 -10px;
@@ -12,7 +14,7 @@
 }
 
 .col-1-3 {
-  width: 33.33%;
+  width: 100%;
 }
 
 .col-1-4 {
