--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,4 @@
 @import url('components/normalize.css');
 @import url('components/section.css');
 @import url('components/hero.css');
+@import url('components/icons.css');
