--- a/css/components/fonts.css
+++ b/css/components/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../../fonts/icomoon.eot?ka813j');
-  src:  url('../../fonts/icomoon.eot?ka813j#iefix') format('embedded-opentype'),
-    url('../../fonts/icomoon.ttf?ka813j') format('truetype'),
-    url('../../fonts/icomoon.woff?ka813j') format('woff'),
-    url('../../fonts/icomoon.svg?ka813j#icomoon') format('svg');
+  src:  url('../../fonts/icomoon.eot?v2mpfq');
+  src:  url('../../fonts/icomoon.eot?v2mpfq') format('embedded-opentype'),
+    url('../../fonts/icomoon.eot?v2mpfq') format('truetype'),
+    url('../../fonts/icomoon.eot?v2mpfq') format('woff'),
+    url('../../fonts/icomoon.eot?v2mpfq') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,15 +24,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-monitor:before {
-  content: "\e900";
-}
-.icon-basket:before {
-  content: "\e901";
-}
-.icon-pencil2:before {
-  content: "\e906";
-}
 .icon-quotes-left:before {
   content: "\e977";
 }
