--- a/css/components/grid.css
+++ b/css/components/grid.css
@@ -20,3 +20,18 @@
 .col-1-4 {
   width: 25%;
 }
+@media screen and (min-width: 720px) {
+
+  .col-1-3 {
+    width: 33.3%;
+  }
+  .layout {
+    width: 50%;
+    margin-right: 30px;
+
+  }
+  .layout2 {
+    width: 60%;
+    margin-top: 50px;
+  }
+}
