--- a/css/components/header.css
+++ b/css/components/header.css
@@ -4,34 +4,20 @@
   justify-content: space-between;
   align-items:center;
 }
-
-
-.logo {
-  letter-spacing: 0.42px;
-  color: #000000;
-  font-size: 49px;
+.logo-link {
+  font-size: 30px;
+  display: flex;
+  align-items:center;
 }
 
-@media screen and (min-width: 720px) {
-
-  .col-1-3 {
-    width: 33.3%;
-  }
-  .card {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-  }
-  .cart-container {
-    display: flex;
-  }
-  .layout {
-    width: 50%;
-    margin-right: 30px;
-
-  }
-  .layout2 {
-    width: 60%;
-    margin-top: 50px;
-  }
-  }
+.logo {
+  margin-right: 10px;
+  color: white;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #5094f2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
