--- a/css/components/header.css
+++ b/css/components/header.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items:center;
+
 }
 .logo-link {
   font-size: 30px;
@@ -20,4 +21,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 9px;
+}
+.logo_pic {
+  width: 24px;
+height: 21px;
+
 }
