--- a/css/components/burger.css
+++ b/css/components/burger.css
@@ -3,6 +3,76 @@
     position: absolute;
     padding: 0;
 }
+.burger{
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 58px;
+  height: 44px;
+  background-color: #5094f2;
+  border-radius: 4px;
+}
+.burger:hover {
+  opacity: 0.7;
+}
+.burger-list {
+  width: 35px;
+  border-radius: 5px;
+  padding: 2px;
+}
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 6px;
+  background-color: white;
+  margin: 3px 0;
+  transition: 1s;
+}
 
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-0px, 6px) ;
+  transform: rotate(-45deg) translate(-10px, 6px) ;
+}
+
+.change .bar2 {
+  opacity: 0;
+}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+  transform: rotate(45deg) translate(-10px, -8px) ;
+}
+.nav-mobile {
+  display: none;
+}
+ .hidden {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items:  flex-start;
+  position: absolute;
+  z-index: 3;
+  right: 3%;
 
 }
+.hidden li>.link {
+  color: white;
+}
+.hidden>li {
+  margin-bottom: 10px;
+  font-family: fantasy;
+  font-weight: bold;
+}
+li:first-child {
+  margin-top: 20px;
+}
+@media screen and (min-width: 720px) {
+  .navigation {
+    display: flex;
+  }
+  .burger {
+    display: none;  }
+    .nav-mobile {
+      display: none;
+  }
