--- a/css/components/header.css
+++ b/css/components/header.css
@@ -21,10 +21,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 9px;
+  margin-bottom: 10px;
+}
+.logo:hover {
+  opacity: 0.7;
 }
 .logo_pic {
   width: 24px;
 height: 21px;
 
+}
+.header-rigth {
+  position: relative;
 }
