--- a/css/components/navigation.css
+++ b/css/components/navigation.css
@@ -9,25 +9,10 @@ margin: 0px 5px;
 font-size: 20px;
 font-weight: 400;
 letter-spacing: 0.2px;
+margin-bottom: -1px;
 }
 
-.burger{
-  padding: 8px 12px;
-  width: 58px;
-  height: 44px;
-  background-color: #5094f2;
-  border-radius: 4px;
-}
-.burger-nav {
-  width: 100%;
-  border-collapse: collapse;
-}
-.burger-nav td {
-  padding: 3px;
-}
-tr:nth-child(2n+1) {
-  background-color: white;
-}
+
 
 .navigation>.link {
   transition: all 0.5s ease;
@@ -38,12 +23,3 @@ tr:nth-child(2n+1) {
 .navigation> a:hover {
   border-bottom: solid 3px #5094f2;
 }
-
-@media screen and (min-width: 720px) {
-
-  .navigation {
-    display: flex;
-  }
-  .burger {
-    display: none;  }
-  }
